[package]
name = "juicebox-omega"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-gzip", "compression-br", "compression-zstd", "limit", "cors"] }
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mimalloc = "0.1"
hyper = { version = "1", features = ["http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
dashmap = "6.0"
uuid = { version = "1", features = ["v4", "fast-rng"] }


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug-assertions = false

# Optimize all dependencies aggressively
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[dev-dependencies]
tempfile = "3"
